fixed bug on z-indexon header.

--- a/src/theme/css/style.scss
+++ b/src/theme/css/style.scss
@@ -133,7 +133,7 @@ body {
   .sticky {
     position: fixed;
     background-color: $white-color;
-    z-index: 1;
+    z-index: 2;
     padding: 20px 0px 20px 25px;
     margin-left: 64px !important;
     width: 100%;
